--- a/index.css
+++ b/index.css
@@ -219,15 +219,16 @@
 }
 .l-grid-hd-cell-sort
 {
-    overflow:hidden;
+    overflow:hidden; width:15px;display:inline-block;float: right;background-repeat:no-repeat ;
+    background-position: 0 15px;
 }
 .l-grid-hd-cell-sort-asc
 {
-    background: no-repeat center;
+    background-image:url('./img/up.png') ;background-size:12px 12px ;
 }
 .l-grid-hd-cell-sort-desc
 {
-    background: no-repeat center;
+    background-image:url('./img/down.png');background-size:20px 20px ;background-position: -5px 12px;
 }
 .l-grid-hd-cell-btn
 {
@@ -333,12 +334,13 @@
 .l-grid-row-cell-detail .l-grid-row-cell-inner{margin-left:0px; margin-right:0px; width:27px; overflow:hidden;}
 .l-grid-row-cell-detail .l-grid-row-cell-inner span
 {
-    display:block; width:21px; height:21px; background: no-repeat 5px 5px;
-    cursor:pointer; overflow:hidden;
+    display:block;  width:15px; height:15px;
+    cursor:pointer; overflow:hidden;background:url('./img/add.png') no-repeat;
+    background-size:cover ;margin:10px auto;
 }
 .l-grid-row-cell-detail .l-grid-row-cell-inner span.l-open
 {
-    background: no-repeat 5px 5px;
+    background:url('./img/jian.png') no-repeat;background-size:cover ;
 }
 
 .l-grid-row-cell-checkbox .l-grid-row-cell-inner{margin-left:0px; margin-right:0px;}
@@ -479,11 +481,11 @@
 }
 .l-grid-tree-link-open
 {
-    cursor:pointer;background: no-repeat center;
+    cursor:pointer;background:url('./img/jian.png') no-repeat;background-size: 15px;
 }
 .l-grid-tree-link-close
 {
-    cursor:pointer;background: no-repeat center;
+    cursor:pointer;background:url('./img/add.png') no-repeat;background-size: 15px;
 }
 /*
     frozen grid
