--- a/index.css
+++ b/index.css
@@ -253,7 +253,7 @@
 .l-grid-hd-cell
 {
     padding:0; margin:0;overflow:hidden;
-    border-right:1px solid #A3C0E8;
+    border-right:1px solid #464e78;
     text-align:center;
 }
 .l-grid-hd-cell-last
@@ -592,7 +592,7 @@
 .l-grid-header-table{
     background-color: #464e78;
 }
-.l-grid-hd-cell,.l-grid-row-cell{
+.l-grid-row-cell{
     border: 0;
 }
 .l-grid-hd-cell-inner{
