--- a/index.css
+++ b/index.css
@@ -631,13 +631,19 @@
 
 
 /*ui bug处理*/
-.l-grid-body-table{
-    width:100%!important;
-}
+/*.l-grid-body-table{*/
+    /*width:100%!important;*/
+/*}*/
 .l-grid-body{
     overflow-x:auto
 }
 .l-grid-row-cell-inner{
     margin-left: 0;
-
 }
+.l-grid-body-table .l-grid-row-alt .l-grid-row-cell {
+    border-right:1px solid #fff;
+}
+.l-grid-body-table .l-grid-row-alt:nth-of-type(2n) .l-grid-row-cell {
+    border-right:1px solid #f5f5f5;
+}
+
