--- a/index.css
+++ b/index.css
@@ -622,28 +622,29 @@
     background-color:#666 ;
     border-radius:5px;
 }
-.l-grid-header-inner{
+/*.l-grid-header-inner{
     background:#464e78 ;
-}
+}*/
 /*.l-grid-body1{*/
 /*height: 100%!important;*/
 /*}*/
 
 
 /*ui bug处理*/
-/*.l-grid-body-table{*/
-    /*width:100%!important;*/
-/*}*/
+.l-grid-body-table{
+    width:100%!important;
+}
 .l-grid-body{
     overflow-x:auto
 }
 .l-grid-row-cell-inner{
     margin-left: 0;
 }
-.l-grid-body-table .l-grid-row-alt .l-grid-row-cell {
+/*.l-grid-body-table .l-grid-row-alt .l-grid-row-cell {
     border-right:1px solid #fff;
 }
 .l-grid-body-table .l-grid-row-alt:nth-of-type(2n) .l-grid-row-cell {
     border-right:1px solid #f5f5f5;
-}
+}*/
+
 
