--- a/index2.css
+++ b/index2.css
@@ -114,7 +114,7 @@
     position: relative; width:100%;
     top: 0px;
     left: 0px; overflow-y: auto;
-    overflow-x: auto;
+    overflow-x: hidden;
 }
 .l-grid-body-table
 {
@@ -254,7 +254,6 @@
 {
     padding:0; margin:0;overflow:hidden;
     border-right:1px solid #464e78;
-    /*border-right: 0;*/
     text-align:center;
 }
 .l-grid-hd-cell-last
@@ -635,20 +634,17 @@
 .l-grid-body-table{
     width:100%!important;
 }
-/*.l-grid-body{
+.l-grid-body{
     overflow-x:auto
-}*/
+}
 .l-grid-row-cell-inner{
     margin-left: 0;
 }
-.l-grid-body-table .l-grid-row-alt .l-grid-row-cell {
+/*.l-grid-body-table .l-grid-row-alt .l-grid-row-cell {
     border-right:1px solid #fff;
 }
 .l-grid-body-table .l-grid-row-alt:nth-of-type(2n) .l-grid-row-cell {
     border-right:1px solid #f5f5f5;
-}
-/*.l-grid-body2{
-    overflow-x:auto;
-    width:100%;
 }*/
+
 
